--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,34 @@
 asgiref==3.7.2
 asttokens==2.2.1
+attrs==23.1.0
 backcall==0.2.0
+Brotli==1.0.9
+certifi==2023.5.7
+charset-normalizer==3.1.0
 colorama==0.4.6
+coreapi==2.3.3
+coreschema==0.0.4
 decorator==5.1.1
+dj-database-url==2.0.0
 Django==4.2.2
+django-rest-swagger==2.2.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+drf-spectacular==0.26.2
 executing==1.2.0
+gunicorn==20.1.0
+idna==3.4
+inflection==0.5.1
 iniconfig==2.0.0
 ipdb==0.13.13
 ipython==8.14.0
+itypes==1.2.0
 jedi==0.18.2
+Jinja2==3.1.2
+jsonschema==4.17.3
+MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
+openapi-codec==1.3.2
 packaging==23.1
 parso==0.8.3
 pickleshare==0.7.5
@@ -21,14 +38,22 @@ psycopg2-binary==2.9.6
 pure-eval==0.2.2
 Pygments==2.15.1
 PyJWT==2.7.0
+pyrsistent==0.19.3
 pytest==7.3.2
 pytest-django==4.5.2
 pytest-testdox==3.0.1
 python-dotenv==1.0.0
 pytz==2023.3
+PyYAML==6.0
+requests==2.31.0
+simplejson==3.19.1
 six==1.16.0
 sqlparse==0.4.4
 stack-data==0.6.2
 traitlets==5.9.0
+typing_extensions==4.6.3
 tzdata==2023.3
+uritemplate==4.1.1
+urllib3==2.0.3
 wcwidth==0.2.6
+whitenoise==6.5.0
